Fixed modal close issue on scrollbar click

--- a/assets/scss/shared-ui/_modals.scss
+++ b/assets/scss/shared-ui/_modals.scss
@@ -29,7 +29,7 @@
 			z-index: #{map-get($modal, z-index) - 1};
 			top: map-get($wordpress, adminbar);
 			left: map-get($wordpress, adminmenu);
-			right: 20px;
+			right: #{($scrollbar--width)};
 
 			&:hover {
 				cursor: pointer;
